<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UDPchat</string>
    <string name="action_settings">Settings</string>
    <string name="enterName">Enter a display name:</string>
    <string name="submitName">Start</string>
    <string name="call">Call Contact</string>
    <string name="selectContact">Select a contact to call: </string>
    <string name="update">Update Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_make_call">UDPChat</string>
    <string name="calling">"Calling: "</string>
    <string name="mute">Mute Mic</string>
    <string name="endCall">End Call</string>
    <string name="title_activity_receive_call">UDPChat</string>
    <string name="incomingCall">"Incoming call: "</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="string_call_ip_address">Call ip address</string>
    <string name="hint_ip_address">Ip address</string>

</resources>